--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -14,7 +14,7 @@
         android:paddingBottom="@dimen/toolbar_padding">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/signUpToolbar"
+            android:id="@+id/authToolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:navigationIcon="@drawable/ic_arrow_back"
