--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -9,7 +9,7 @@
 
     <Button
         android:id="@+id/signUpBtn"
-        style="@style/BlueAuthButton"
+        style="@style/BlueButton"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/margin_16"
         android:background="@drawable/button_blue_rounded"
@@ -18,7 +18,7 @@
 
     <Button
         android:id="@+id/logInBtn"
-        style="@style/WhiteAuthButton"
+        style="@style/WhiteButton"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/margin_16"
         android:background="@drawable/button_white_rounded"
