--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,7 +16,7 @@
         <item name="android:gravity">center</item>
     </style>
 
-    <style name="AuthButton" parent="Base.Widget.AppCompat.Button">
+    <style name="BaseButton" parent="Base.Widget.AppCompat.Button">
         <item name="android:gravity">center</item>
         <item name="android:layout_width">@dimen/auth_button_width</item>
         <item name="android:layout_height">@dimen/auth_button_height</item>
@@ -24,12 +24,12 @@
         <item name="android:textSize">@dimen/text_16</item>
     </style>
 
-    <style name="BlueAuthButton" parent="AuthButton">
+    <style name="BlueButton" parent="BaseButton">
         <item name="android:background">@color/blue_dark</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
-    <style name="WhiteAuthButton" parent="AuthButton">
+    <style name="WhiteButton" parent="BaseButton">
         <item name="android:background">@color/white</item>
         <item name="android:textColor">@color/blue_dark</item>
     </style>
